test/good/generics/basic08.px

func print'<A>(x: A): A def
    print x
    return x

print'(4)
print'(9.3)
