test/bad/functions/args05.px

func f(Void x) def
    return
